2010-04-15  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/dlvhex.cpp: Added option --nocache and global option
	UseExtAtomCache connected to it.
	* src/dlvhex/EvaluateExtatom.cpp: Calling retrieveCached(...) instead
	of retrieve(...) if that global option is 1 (it is by default).
	* include/dlvhex/PluginInterface.h: Query: added operator< and made
	the interpretation a copy instead of a reference (required for cache).
	Added retrieveCached() function and query cache.
	* src/dlvhex/PluginInterface.cpp: Implemented retrieveCached(...).
	* include/dlvhex/BaseVisitor.h: Allowing to visit const objects.
	* include/dlvhex/PrintVisitor.h: Likewise.
	* include/dlvhex/Literal.h: Likewise.
	* include/dlvhex/AtomSet.h: Likewise.
	* include/dlvhex/Atom.h: Likewise.
	* include/dlvhex/ExternalAtom.h: Likewise.
	* include/dlvhex/AggregateAtom.h: Likewise.
	* include/dlvhex/Program.h: Likewise.
	* include/dlvhex/Rule.h: Likewise.
	* include/dlvhex/Repository.h: Likewise.
	* src/dlvhex/PrintVisitor.cpp: Likewise.
	* src/dlvhex/Atom.cpp: Likewise.
	* src/dlvhex/ExternalAtom.cpp: Likewise.
	* src/dlvhex/Rule.cpp: Likewise.
	* src/dlvhex/Program.cpp: Likewise.
	* src/dlvhex/AggregateAtom.cpp: Likewise.
	* src/dlvhex/Literal.cpp: Likewise.
	* src/dlvhex/AtomSet.cpp: Likewise.

2010-03-15  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.tcc: Parser fix for NAF.
	* examples/Makefile.am: Added testcase for NAF parsing.
	* examples/naftest.hex: Likewise.
	* examples/tests/naftest.out: Likewise.
	* examples/tests/dlvhextests.test: Likewise.

2010-03-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/DLVresultParserDriver.cpp (appendFactFromPropFact):
	Remove NoPredicate assertion.

2010-02-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.tcc: Parser fix for operator <>.
	* examples/operators.hex: Testcase for operators <> and !=.
	* examples/Makefile.am: Likewise.
	* examples/tests/operators.out: Likewise.